# Cpp-Dateinenschreiben

./: CMakeLists.txt
include/: lesen.h  random.h  round.h  schreiben.h
src/: daten.csv  main.cpp
